# python-potato

./: .gitignore  README.md  README_gpcr_ensemble.md  README_wsme_gpcr.md  again.py  pyproject.toml  requirements.txt
examples/: calibration_regression.py  gpcr_pipeline_common.py  gpcr_pipeline_cryoem_common.py  gpcr_pipeline_cryoem_extract.py  gpcr_pipeline_gpr132_string_demo.py  gpcr_pipeline_gpr132_string_ph6_demo.py  gpcr_pipeline_gpr4_ph_titration.py  gpcr_pipeline_gpr4_symmetric_demo.py  gpcr_pipeline_gpr68_demo.py  gpcr_pipeline_gpr68_string_demo.py  gpcr_pipeline_gpr68_string_ph6_demo.py  gpcr_pipeline_real_demo.py  gpcr_pipeline_symmetric_string_demo.py  gpcr_pipeline_tm_topology.py  run_ci2.py  synthetic_demo.py
gibbs/: README.md  gpcr_gibbs_energy.py  requirements.txt
gpcr_energy_landscapes/: __init__.py  cli.py  collective_variables.py  dimensionality_reduction.py  energy_landscape.py  io.py  pipeline.py  plotting.py
gpcr_ensemble/: __init__.py  activation_state.py  cluster.py  msa_subsample.py  pipeline.py  run_colabfold.py
linkage_pka/: FINDINGS.md  __init__.py  dielectric_map.py  double_funnel.py  gate_a.py  linkage.py  membrane_frame.py  multisite.py  pipeline.py  structure_prep.py  titration.py
tests/: helpers.py  test_activation_state.py  test_alanine_scan.py  test_asr.py  test_blocking.py  test_calibration.py  test_cluster.py  test_collective_variables.py  test_coupling.py  test_dielectric_map.py  test_dimensionality_reduction.py  test_double_funnel.py  test_dssp.py  test_energy_landscape.py  test_gate_a.py  test_io.py  test_ion_pocket.py  (+13 more)
(+100 files in other folders)
